remove testing section and fix IKEA effect layout bug

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -332,10 +332,6 @@ h3 {
 
 /* ----------------------------Content---------------------------------------- */
 
-#ikea-effect {
-  padding: 100px 0;
-}
-
 .theme-header {
   font-size: 24px;
   font-family: 'Neucha';
